--- a/p/esmulti_0d1c8b2c041f202433153b7e0e58a8f660551686/index.html
+++ b/p/esmulti_0d1c8b2c041f202433153b7e0e58a8f660551686/index.html
@@ -4,10 +4,10 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>Delegado é preso por importunação sexual contra adolescente de 14 anos em Apiacá</title>
-  <meta name="description" content="O delegado Adhemar Pereira Fully, de 40 anos, foi preso em flagrante por importunação sexual contra uma adolescente de 14 anos durante festa em Apiacá."/>
+  <meta name="description" content="O delegado Adhemar Pereira Fully, de 40 anos, foi preso em flagrante por importunação sexual contra uma adolescente durante festa em Apiacá."/>
   <link rel="canonical" href="https://evwbr.github.io/es/p/esmulti_0d1c8b2c041f202433153b7e0e58a8f660551686/"/>
   <meta property="og:title" content="Delegado é preso por importunação sexual contra adolescente de 14 anos em Apiacá"/>
-  <meta property="og:description" content="O delegado Adhemar Pereira Fully, de 40 anos, foi preso em flagrante por importunação sexual contra uma adolescente de 14 anos durante festa em Apiacá."/>
+  <meta property="og:description" content="O delegado Adhemar Pereira Fully, de 40 anos, foi preso em flagrante por importunação sexual contra uma adolescente durante festa em Apiacá."/>
   <meta property="og:image" content="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Fespiritosantonoticias.com.br%2Fwp-content%2Fuploads%2F2026%2F01%2Fviatura-da-policia-militar-viatura-policia-militar-2598544-article.jpg"/>
   <meta name="twitter:card" content="summary_large_image"/>
   <meta name="twitter:image" content="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Fespiritosantonoticias.com.br%2Fwp-content%2Fuploads%2F2026%2F01%2Fviatura-da-policia-militar-viatura-policia-militar-2598544-article.jpg"/>
@@ -25,13 +25,13 @@
     <figure style="margin:0 0 14px 0;">
       <img src="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Fespiritosantonoticias.com.br%2Fwp-content%2Fuploads%2F2026%2F01%2Fviatura-da-policia-militar-viatura-policia-militar-2598544-article.jpg" alt="Delegado é preso por importunação sexual contra adolescente de 14 anos em Apiacá" style="width:100%;max-width:820px;border-radius:10px;display:block;"/>
     </figure>
-    <p class="lead">O delegado Adhemar Pereira Fully, de 40 anos, foi preso em flagrante por importunação sexual contra uma adolescente de 14 anos durante festa em Apiacá.</p>
-<p>O crime ocorreu durante uma festa no Centro de Apiacá, onde o delegado se aproximou da vítima com frases insistentes e a perseguiu mesmo após ela recusar as investidas e informar sua idade.</p>
-<p>Familiares da adolescente confrontaram o delegado, o que gerou tumulto e acionamento da Polícia Militar. Adhemar apresentava sinais de embriaguez e resistiu à prisão, ofendendo e empurrando os policiais.</p>
-<p>Durante a abordagem, o delegado tentou fugir e precisou ser algemado. Dentro da viatura, ameaçou os policiais dizendo que faria de tudo para que perdessem a farda.</p>
-<p>Foi apreendida com o delegado uma pistola, munições e um carregador, todos pertencentes à Polícia Civil do Espírito Santo, e ele não portava a documentação necessária para o porte de arma fora de serviço.</p>
-<p>Adhemar Pereira Fully foi levado à Delegacia Regional de Cachoeiro de Itapemirim, autuado em flagrante por importunação sexual e transferido para o presídio Alfa 10 em Vila Velha, destinado a ex-policiais e agentes de segurança.</p>
-<p>A Polícia Civil do Espírito Santo repudiou o ocorrido e informou que a Corregedoria-Geral instaurará procedimento administrativo disciplinar para apurar a conduta do delegado. O Conselho Tutelar de Apiacá acompanha o caso e presta apoio à vítima e familiares.</p>
+    <p class="lead">O delegado Adhemar Pereira Fully, de 40 anos, foi preso em flagrante por importunação sexual contra uma adolescente durante festa em Apiacá.</p>
+<p>O crime ocorreu durante uma festa no Centro de Apiacá, onde o delegado se aproximou da vítima de 14 anos com investidas insistentes, dizendo frases como &quot;gata, eu quero você&quot; e a perseguiu pelo evento.</p>
+<p>A adolescente recusou as investidas e informou sua idade, mas o delegado continuou a perseguição até que ela buscou proteção do pai, o que gerou um confronto com familiares da vítima.</p>
+<p>A Polícia Militar foi acionada e, ao abordar Adhemar, constatou que ele estava embriagado, resistiu à prisão, ofendeu e empurrou os policiais, tentou fugir e precisou ser algemado.</p>
+<p>Durante a revista, foi apreendida com o delegado uma pistola, munições e um carregador, todos pertencentes à Polícia Civil do Espírito Santo, sem a documentação necessária para porte fora de serviço.</p>
+<p>Adhemar foi levado à Delegacia Regional de Cachoeiro de Itapemirim, autuado em flagrante por importunação sexual e transferido para o presídio Alfa 10 em Vila Velha, destinado a ex-policiais e agentes de segurança.</p>
+<p>A Polícia Civil do Espírito Santo repudiou o ocorrido, informou que a Corregedoria-Geral abrirá procedimento administrativo disciplinar e o Conselho Tutelar de Apiacá acompanha o caso, prestando apoio à vítima e familiares.</p>
   </div>
 </body>
 </html>
