Update page ESMULTI esmulti_afd78f7c52926979222e2f17e7b9207819bf77e1

--- a/p/esmulti_afd78f7c52926979222e2f17e7b9207819bf77e1/index.html
+++ b/p/esmulti_afd78f7c52926979222e2f17e7b9207819bf77e1/index.html
@@ -26,11 +26,12 @@
       <img src="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Feshoje.com.br%2Fwp-content%2Fuploads%2F2026%2F02%2Fmorte-mulher-trans-centro.jpg" alt="Mulher trans é morta a tiros após confusão no Centro de Vitória" style="width:100%;max-width:820px;border-radius:10px;display:block;"/>
     </figure>
     <p class="lead">Uma mulher trans foi morta a tiros na Praça Costa Pereira, no Centro de Vitória, após uma briga envolvendo facadas e intervenção da Guarda Municipal.</p>
-<p>O incidente ocorreu por volta das 22h, após a passagem dos blocos de Carnaval. A mulher trans, que estava armada com uma faca, teria esfaqueado outra mulher trans, sua desafeta.</p>
-<p>A vítima tentou se proteger atrás de agentes da Guarda Municipal presentes na região, mas a agressora continuou a avançar contra ela, mesmo após ordens para parar e alertas de que seria necessário atirar.</p>
-<p>Um dos guardas disparou contra a agressora para se defender e proteger a vítima. A mulher atingida pelos tiros caiu ferida e foi levada ao Hospital de Urgência e Emergência de Vitória, onde morreu ao dar entrada.</p>
-<p>As duas mulheres, de 23 e 28 anos, foram autuadas em flagrante por tentativa de homicídio qualificada por motivo fútil e impossibilidade de defesa da vítima. A mulher de 28 anos foi autuada como partícipe.</p>
-<p>O guarda municipal que efetuou o disparo foi ouvido e liberado, pois ficou comprovada a legítima defesa de terceiro. O corpo da vítima foi encaminhado ao Instituto Médico-Legal para necropsia e posterior liberação aos familiares.</p>
+<p>O caso ocorreu por volta das 22h deste domingo (15), após a passagem dos blocos de Carnaval. A mulher trans estava com uma faca e teria esfaqueado outra mulher trans, que seria sua desafeta.</p>
+<p>A vítima tentou se proteger atrás de um grupo de agentes da Guarda Municipal presentes na região. Mesmo com a presença dos guardas, a suspeita continuou tentando agredir a vítima.</p>
+<p>Os guardas municipais ordenaram diversas vezes que a agressora parasse e alertaram que, caso não obedecesse, seria necessário atirar. A mulher não recuou e avançou em direção aos agentes.</p>
+<p>Um dos guardas disparou contra a agressora para se defender e proteger a vítima. A mulher atingida pelos tiros correu alguns metros e caiu ferida no chão, sendo levada ao Hospital de Urgência e Emergência, onde morreu ao dar entrada.</p>
+<p>A mulher que foi esfaqueada recebeu atendimento e prestou depoimento na delegacia.</p>
+<p>A Polícia Civil autuou em flagrante as duas pessoas, de 23 e 28 anos, por tentativa de homicídio qualificada por motivo fútil e impossibilidade de defesa da vítima, sendo a pessoa de 28 anos considerada partícipe. O guarda municipal foi ouvido e liberado, pois ficou comprovada a legítima defesa de terceiro. O corpo foi encaminhado ao Instituto Médico-Legal para necropsia e posterior liberação aos familiares.</p>
   </div>
 </body>
 </html>
