--- a/p/esmulti_6d78cb6df88509c20a88bd325a352690f1ce48e7/index.html
+++ b/p/esmulti_6d78cb6df88509c20a88bd325a352690f1ce48e7/index.html
@@ -26,11 +26,12 @@
       <img src="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Fespiritosantonoticias.com.br%2Fwp-content%2Fthemes%2Flayout_2019%2Fres%2Fimg%2Flogo.png" alt="Mulher trans é morta pela Guarda Municipal após esfaquear rival no Centro de Vitória" style="width:100%;max-width:820px;border-radius:10px;display:block;"/>
     </figure>
     <p class="lead">Natasha Lucas do Nascimento, de 27 anos, foi baleada por um agente da Guarda Municipal após atacar outra mulher com uma faca na Praça Costa Pereira.</p>
-<p>O incidente ocorreu no final da noite de domingo (15), durante o carnaval no Centro de Vitória. Natasha Lucas do Nascimento teria ignorado ordens de parada da Guarda Municipal e atacado uma mulher com uma faca na frente dos agentes.</p>
-<p>Testemunhas relataram que a briga foi motivada por um desentendimento antigo entre as duas mulheres. A vítima da facada correu para uma viatura da Guarda Municipal em busca de socorro, protegendo-se atrás dos agentes.</p>
-<p>Mesmo após as ordens para parar, Natasha avançou contra a vítima e foi atingida por um disparo efetuado por um guarda. A vítima afirmou que o agente avisou que atiraria caso Natasha não parasse.</p>
-<p>Natasha foi socorrida e levada ao Hospital Estadual de Urgência e Emergência (Heue), mas não resistiu aos ferimentos. A Guarda Municipal informou que agiu em defesa da vida da vítima, utilizando força necessária para cessar a agressão.</p>
-<p>A Polícia Civil encaminhou a ocorrência ao plantão da Delegacia Regional de Vitória. Duas mulheres que estavam com Natasha foram levadas para prestar esclarecimentos, e o corpo foi encaminhado ao Departamento Médico Legal para necropsia.</p>
+<p>A confusão ocorreu no final da noite de domingo (15), durante o carnaval no Centro de Vitória. Natasha Lucas do Nascimento teria ignorado ordens de parada e atacado outra mulher na frente dos agentes da Guarda Municipal.</p>
+<p>Testemunhas relataram que a briga teve origem em um desentendimento antigo entre as duas mulheres. A vítima da facada correu em direção à viatura da Guarda Municipal para pedir socorro e tentou se proteger atrás dos agentes.</p>
+<p>Mesmo após as ordens para parar, Natasha avançou e feriu a rival no braço com uma faca. Um agente da Guarda Municipal efetuou um disparo que atingiu Natasha.</p>
+<p>Natasha foi socorrida e levada para o Hospital Estadual de Urgência e Emergência (Heue), mas não resistiu aos ferimentos e morreu.</p>
+<p>A Guarda Municipal de Vitória afirmou que a equipe agiu em defesa da vida da vítima, utilizando força necessária após ordens verbais ignoradas,.</p>
+<p>A ocorrência foi encaminhada à Delegacia Regional de Vitória. Duas mulheres que estavam com Natasha prestaram esclarecimentos. O corpo foi levado ao Departamento Médico Legal para necropsia.</p>
   </div>
 </body>
 </html>
