--- a/p/esmulti_02b950049cc8ac289a49e3c454ed2e7af80de9ed/index.html
+++ b/p/esmulti_02b950049cc8ac289a49e3c454ed2e7af80de9ed/index.html
@@ -26,12 +26,12 @@
       <img src="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Feshoje.com.br%2Fwp-content%2Fuploads%2F2026%2F02%2Foperacao-placa-fantasma-serra.jpg" alt="Casal é preso em flagrante por adulteração de placas em operação da GCM da Serra e Polícia Civil" style="width:100%;max-width:820px;border-radius:10px;display:block;"/>
     </figure>
     <p class="lead">Operação 'Placa Fantasma' desarticula esquema criminoso de adulteração de placas automotivas na Serra, com prisão de casal.</p>
-<p>A Guarda Civil Municipal da Serra, em parceria com a Polícia Civil, realizou a operação 'Placa Fantasma', que resultou na prisão em flagrante de um casal acusado de adulterar placas de veículos no município.</p>
+<p>A Guarda Civil Municipal (GCM) da Serra, em parceria com a Polícia Civil, realizou a operação 'Placa Fantasma', que resultou na prisão em flagrante de um casal acusado de adulterar placas de veículos no município.</p>
 <p>A ação ocorreu em diversos bairros, incluindo Residencial Vista do Mestre, Planície da Serra, Morada de Laranjeiras, Ourimar e Jardim Limoeiro, onde foram cumpridos sete mandados de busca e apreensão.</p>
 <p>As investigações indicaram que o casal atuava em uma empresa credenciada ao Detran|ES, localizada em Jardim Limoeiro, realizando as adulterações sem o conhecimento do proprietário do estabelecimento.</p>
 <p>Apesar de declararem renda mensal de R$ 1,5 mil, o casal ostentava uma vida de luxo nas redes sociais, o que chamou a atenção das autoridades.</p>
-<p>O supervisor da GCM da Serra, Esdras Vianna, destacou a importância da parceria entre as forças de segurança para ampliar a capacidade técnica no combate a crimes e ressaltou que a operação impacta diretamente na logística de outras práticas ilícitas.</p>
-<p>A vice-prefeita e secretária de Defesa Social, Gracimeri Gaviorno, afirmou que o sucesso da operação reflete o investimento municipal em monitoramento e qualificação técnica, além de reforçar a prioridade em manter a ordem e a tranquilidade das famílias serranas.</p>
+<p>Esdras Vianna, supervisor da GCM da Serra, destacou que a operação evidencia a capacidade técnica e a coordenação entre as forças municipais e estaduais para combater crimes com uso de dados e tecnologia.</p>
+<p>A vice-prefeita e secretária de Defesa Social, Gracimeri Gaviorno, ressaltou que o combate à adulteração veicular é fundamental para impedir o uso de veículos clonados em crimes mais graves e que a integração das equipes é prioridade para manter a segurança na Serra.</p>
   </div>
 </body>
 </html>
