--- a/p/esmulti_aacbd16919ffe0c268f7c47a3a9d9330afeb5271/index.html
+++ b/p/esmulti_aacbd16919ffe0c268f7c47a3a9d9330afeb5271/index.html
@@ -4,10 +4,10 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>MPES investiga contratação de shows em Baixo Guandu que ultrapassa orçamento da Cultura</title>
-  <meta name="description" content="Ministério Público do Espírito Santo apura contratação de shows para aniversário de Baixo Guandu com valor que ultrapassa orçamento anual da Secretaria de Cultura."/>
+  <meta name="description" content="Ministério Público do Espírito Santo apura contratação de shows para aniversário de Baixo Guandu que ultrapassa orçamento anual da Secretaria de Cultura."/>
   <link rel="canonical" href="https://evwbr.github.io/es/p/esmulti_aacbd16919ffe0c268f7c47a3a9d9330afeb5271/"/>
   <meta property="og:title" content="MPES investiga contratação de shows em Baixo Guandu que ultrapassa orçamento da Cultura"/>
-  <meta property="og:description" content="Ministério Público do Espírito Santo apura contratação de shows para aniversário de Baixo Guandu com valor que ultrapassa orçamento anual da Secretaria de Cultura."/>
+  <meta property="og:description" content="Ministério Público do Espírito Santo apura contratação de shows para aniversário de Baixo Guandu que ultrapassa orçamento anual da Secretaria de Cultura."/>
   <meta property="og:image" content="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Feshoje.com.br%2Fwp-content%2Fuploads%2F2026%2F02%2FDesign-sem-nome-3-2.jpg"/>
   <meta name="twitter:card" content="summary_large_image"/>
   <meta name="twitter:image" content="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Feshoje.com.br%2Fwp-content%2Fuploads%2F2026%2F02%2FDesign-sem-nome-3-2.jpg"/>
@@ -25,13 +25,13 @@
     <figure style="margin:0 0 14px 0;">
       <img src="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Feshoje.com.br%2Fwp-content%2Fuploads%2F2026%2F02%2FDesign-sem-nome-3-2.jpg" alt="MPES investiga contratação de shows em Baixo Guandu que ultrapassa orçamento da Cultura" style="width:100%;max-width:820px;border-radius:10px;display:block;"/>
     </figure>
-    <p class="lead">Ministério Público do Espírito Santo apura contratação de shows para aniversário de Baixo Guandu com valor que ultrapassa orçamento anual da Secretaria de Cultura.</p>
-<p>O Ministério Público do Estado do Espírito Santo instaurou procedimento para verificar a regularidade do empenho de R$ 1.754.000,00 destinados às apresentações da cantora Ana Castela e da dupla Zé Neto &amp; Cristiano na festa de 91 anos de emancipação política de Baixo Guandu.</p>
+    <p class="lead">Ministério Público do Espírito Santo apura contratação de shows para aniversário de Baixo Guandu que ultrapassa orçamento anual da Secretaria de Cultura.</p>
+<p>O Ministério Público do Estado do Espírito Santo instaurou procedimento para verificar a regularidade do empenho de R$ 1.754.000,00 destinados aos shows da cantora Ana Castela e da dupla Zé Neto &amp; Cristiano na festa de 91 anos de emancipação política de Baixo Guandu.</p>
 <p>Os contratos foram assinados pela Secretaria Municipal de Educação, que possui orçamento de R$ 54.468.199,00 em 2026, e as apresentações estão programadas para os dias 10, 11 e 12 de abril, dentro da programação oficial do município.</p>
-<p>O valor total empenhado para os dois shows ultrapassa em R$ 420 mil o orçamento anual previsto para a Secretaria de Cultura, que é de R$ 1.333.280,00 para 2026.</p>
-<p>O contrato da dupla Zé Neto &amp; Cristiano tem valor total de R$ 904 mil, dos quais R$ 421.264,00 já teriam sido pagos até o último dia 30, enquanto o show de Ana Castela foi contratado por R$ 850 mil, sem informações sobre pagamentos realizados até o momento.</p>
+<p>O valor total empenhado para os dois shows ultrapassa o orçamento anual previsto para a Secretaria de Cultura em 2026, que é de R$ 1.333.280,00, representando um excesso de R$ 420 mil.</p>
+<p>O contrato da dupla Zé Neto &amp; Cristiano tem valor total de R$ 904 mil, dos quais R$ 421.264,00 já teriam sido pagos até o último dia 30. O show de Ana Castela foi contratado por R$ 850 mil, com vigência até 30 de abril, sem informações sobre pagamentos realizados até o momento.</p>
 <p>As contratações foram realizadas sem licitação e também constam como signatárias dos contratos a Secretaria de Políticas para as Mulheres e a Secretaria de Cultura.</p>
-<p>A prefeitura tem prazo de 10 dias para apresentar esclarecimentos sobre a origem dos recursos, o impacto financeiro da contratação e a regularidade do procedimento, sendo que a legislação permite a contratação de apresentações artísticas pela Secretaria de Educação, desde que as despesas não sejam contabilizadas no percentual mínimo constitucional obrigatório para a Educação.</p>
+<p>A prefeitura tem prazo de 10 dias para apresentar esclarecimentos sobre a origem dos recursos, o impacto financeiro da contratação e a regularidade do procedimento, considerando que a legislação permite contratações artísticas pela Secretaria de Educação, desde que as despesas não sejam contabilizadas dentro do percentual mínimo constitucional obrigatório para a Educação.</p>
   </div>
 </body>
 </html>
