--- a/p/esmulti_30103c6f381df64fa27371ab7c1735750a2d87d5/index.html
+++ b/p/esmulti_30103c6f381df64fa27371ab7c1735750a2d87d5/index.html
@@ -26,12 +26,12 @@
       <img src="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Feshoje.com.br%2Fwp-content%2Fuploads%2F2026%2F02%2Fmorto-residencial-coqueiral.jpg" alt="Jovem de 26 anos é morto a tiros em Vila Velha" style="width:100%;max-width:820px;border-radius:10px;display:block;"/>
     </figure>
     <p class="lead">Marcos Vinícius dos Santos Loyola foi assassinado no bairro Residencial Coqueiral, em Vila Velha.</p>
-<p>O crime ocorreu na tarde deste domingo (15) quando Marcos recebeu uma mensagem no celular e saiu de casa. Pouco depois, ele ligou para a esposa informando que estava retornando.</p>
-<p>No caminho de volta, Marcos foi surpreendido e atingido por diversos disparos. A Polícia Militar foi acionada, mas ao chegar ao local, a vítima já estava morta.</p>
-<p>Marcos Vinícius tinha 26 anos e passagens pela Justiça por tráfico de drogas.</p>
-<p>A Polícia Civil informou que a Divisão Especializada de Homicídios e Proteção à Pessoa (DHPP) de Vila Velha ficará responsável pela investigação do caso.</p>
+<p>O crime ocorreu na tarde deste domingo (15), quando Marcos Vinícius, conhecido como 'Gordinho', recebeu uma mensagem no celular e saiu de casa.</p>
+<p>Pouco depois, ele ligou para a esposa informando que estava retornando, mas foi surpreendido e atingido por diversos disparos no caminho de volta.</p>
+<p>A Polícia Militar foi acionada, mas Marcos já estava morto quando os militares chegaram ao local.</p>
+<p>Marcos Vinícius tinha passagens pela Justiça por tráfico de drogas.</p>
+<p>A Polícia Civil informou que a Divisão Especializada de Homicídios e Proteção à Pessoa (DHPP) de Vila Velha investigará o caso, e nenhum suspeito foi detido até o momento.</p>
 <p>O corpo foi encaminhado ao Instituto Médico-Legal (IML) para necropsia antes da liberação aos familiares.</p>
-<p>Informações que possam ajudar nas investigações podem ser repassadas de forma sigilosa pelo Disque-Denúncia 181, via telefone, site ou WhatsApp.</p>
   </div>
 </body>
 </html>
