--- a/p/esmulti_02b950049cc8ac289a49e3c454ed2e7af80de9ed/index.html
+++ b/p/esmulti_02b950049cc8ac289a49e3c454ed2e7af80de9ed/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Casal é preso em flagrante por adulteração de placas em operação da GCM da Serra e Polícia Civil</title>
-  <meta name="description" content="Operação 'Placa Fantasma' desarticula esquema criminoso de adulteração de placas automotivas na Serra, com prisão de casal."/>
+  <title>Operação 'Placa Fantasma' desarticula esquema de adulteração de placas na Serra</title>
+  <meta name="description" content="Casal é preso em flagrante durante ação conjunta da Guarda Civil Municipal da Serra e Polícia Civil que cumpriu sete mandados de busca e apreensão."/>
   <link rel="canonical" href="https://evwbr.github.io/es/p/esmulti_02b950049cc8ac289a49e3c454ed2e7af80de9ed/"/>
-  <meta property="og:title" content="Casal é preso em flagrante por adulteração de placas em operação da GCM da Serra e Polícia Civil"/>
-  <meta property="og:description" content="Operação 'Placa Fantasma' desarticula esquema criminoso de adulteração de placas automotivas na Serra, com prisão de casal."/>
+  <meta property="og:title" content="Operação 'Placa Fantasma' desarticula esquema de adulteração de placas na Serra"/>
+  <meta property="og:description" content="Casal é preso em flagrante durante ação conjunta da Guarda Civil Municipal da Serra e Polícia Civil que cumpriu sete mandados de busca e apreensão."/>
   <meta property="og:image" content="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Feshoje.com.br%2Fwp-content%2Fuploads%2F2026%2F02%2Foperacao-placa-fantasma-serra.jpg"/>
   <meta name="twitter:card" content="summary_large_image"/>
   <meta name="twitter:image" content="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Feshoje.com.br%2Fwp-content%2Fuploads%2F2026%2F02%2Foperacao-placa-fantasma-serra.jpg"/>
@@ -21,17 +21,17 @@
 </head>
 <body>
   <div class="wrap">
-    <h1>Casal é preso em flagrante por adulteração de placas em operação da GCM da Serra e Polícia Civil</h1>
+    <h1>Operação 'Placa Fantasma' desarticula esquema de adulteração de placas na Serra</h1>
     <figure style="margin:0 0 14px 0;">
-      <img src="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Feshoje.com.br%2Fwp-content%2Fuploads%2F2026%2F02%2Foperacao-placa-fantasma-serra.jpg" alt="Casal é preso em flagrante por adulteração de placas em operação da GCM da Serra e Polícia Civil" style="width:100%;max-width:820px;border-radius:10px;display:block;"/>
+      <img src="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Feshoje.com.br%2Fwp-content%2Fuploads%2F2026%2F02%2Foperacao-placa-fantasma-serra.jpg" alt="Operação 'Placa Fantasma' desarticula esquema de adulteração de placas na Serra" style="width:100%;max-width:820px;border-radius:10px;display:block;"/>
     </figure>
-    <p class="lead">Operação 'Placa Fantasma' desarticula esquema criminoso de adulteração de placas automotivas na Serra, com prisão de casal.</p>
-<p>A Guarda Civil Municipal (GCM) da Serra, em parceria com a Polícia Civil, realizou a operação 'Placa Fantasma', que resultou na prisão em flagrante de um casal acusado de adulterar placas de veículos no município.</p>
-<p>A ação ocorreu em diversos bairros, incluindo Residencial Vista do Mestre, Planície da Serra, Morada de Laranjeiras, Ourimar e Jardim Limoeiro, onde foram cumpridos sete mandados de busca e apreensão.</p>
-<p>As investigações indicaram que o casal atuava em uma empresa credenciada ao Detran|ES, localizada em Jardim Limoeiro, realizando as adulterações sem o conhecimento do proprietário do estabelecimento.</p>
-<p>Apesar de declararem renda mensal de R$ 1,5 mil, o casal ostentava uma vida de luxo nas redes sociais, o que chamou a atenção das autoridades.</p>
-<p>Esdras Vianna, supervisor da GCM da Serra, destacou que a operação evidencia a capacidade técnica e a coordenação entre as forças municipais e estaduais para combater crimes com uso de dados e tecnologia.</p>
-<p>A vice-prefeita e secretária de Defesa Social, Gracimeri Gaviorno, ressaltou que o combate à adulteração veicular é fundamental para impedir o uso de veículos clonados em crimes mais graves e que a integração das equipes é prioridade para manter a segurança na Serra.</p>
+    <p class="lead">Casal é preso em flagrante durante ação conjunta da Guarda Civil Municipal da Serra e Polícia Civil que cumpriu sete mandados de busca e apreensão.</p>
+<p>A operação 'Placa Fantasma' foi realizada pela Guarda Civil Municipal (GCM) da Serra em parceria com a Delegacia Especializada de Roubos e Furtos de Veículos (DRFV), com diligências nos bairros Residencial Vista do Mestre, Planície da Serra, Morada de Laranjeiras, Ourimar e Jardim Limoeiro.</p>
+<p>Sete mandados de busca e apreensão foram cumpridos na última semana, resultando na prisão em flagrante de um casal acusado de adulterar placas automotivas em uma empresa credenciada ao Detran|ES, localizada em Jardim Limoeiro.</p>
+<p>As investigações indicaram que o casal realizava as adulterações sem o conhecimento do proprietário do estabelecimento e ostentava uma vida de luxo nas redes sociais, apesar de declararem renda mensal de apenas R$ 1,5 mil.</p>
+<p>Esdras Vianna, supervisor da GCM da Serra, destacou que a operação evidencia a coordenação entre o município e o Estado, ressaltando que a Guarda da Serra atua como um braço estratégico que utiliza dados e tecnologia para combater crimes.</p>
+<p>A desarticulação do esquema representa um golpe direto na logística de outras práticas ilícitas, como roubos e furtos, contribuindo para ampliar a segurança da população.</p>
+<p>A vice-prefeita e secretária de Defesa Social, Gracimeri Gaviorno, afirmou que o sucesso da operação reflete o investimento municipal em monitoramento e qualificação técnica, ressaltando a importância do combate à adulteração veicular para manter a ordem e a tranquilidade das famílias serranas.</p>
   </div>
 </body>
 </html>
