Update page ESMULTI esmulti_0a9a6f67f918e54eda0473e6fa4f8dd23b7867dd

--- a/p/esmulti_0a9a6f67f918e54eda0473e6fa4f8dd23b7867dd/index.html
+++ b/p/esmulti_0a9a6f67f918e54eda0473e6fa4f8dd23b7867dd/index.html
@@ -26,11 +26,11 @@
       <img src="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Feshoje.com.br%2Fwp-content%2Fuploads%2F2026%2F02%2FCaptura-de-tela-2026-02-17-074511.png" alt="Parques da Serra funcionam normalmente durante o Carnaval com entrada gratuita" style="width:100%;max-width:820px;border-radius:10px;display:block;"/>
     </figure>
     <p class="lead">Parque da Cidade, Jardim Botânico e Caminho do Mar oferecem lazer e contato com a natureza durante o Carnaval na Serra.</p>
-<p>Os três parques da Serra funcionarão das 6h às 22h durante os quatro dias de Carnaval, com entrada gratuita para o público.</p>
-<p>O Parque da Cidade está localizado entre Valparaíso e Laranjeiras e oferece quadra de tênis, quadra poliesportiva, pista de caminhada, playground e pista de skate.</p>
-<p>O Parque Jardim Botânico fica próximo ao Mestre Álvaro, entre os bairros São Lourenço, Santo Antônio e Cascata, e possui córregos, áreas brejosas, nascentes, um lago artificial, afloramentos rochosos, encostas e remanescentes da Mata Atlântica.</p>
-<p>O Parque Caminho do Mar, situado na Cidade Continental, Setor Oceania, conta com campo society, quadra de areia, quadra poliesportiva, parquinho, praça para pets e a segunda maior rampa de skate do Estado.</p>
-<p>Os parques funcionam diariamente das 6h às 22h, com exceção do Jardim Botânico que tem funcionamento diferenciado para o Horto, aberto de segunda a sexta-feira.</p>
+<p>Os três parques da Serra estarão abertos das 6h às 22h durante os quatro dias de Carnaval, com entrada gratuita para o público.</p>
+<p>O Parque da Cidade, localizado entre Valparaíso e Laranjeiras, possui quadra de tênis, quadra poliesportiva, pista de caminhada, playground e pista de skate.</p>
+<p>O Parque Jardim Botânico, situado entre os bairros São Lourenço, Santo Antônio e Cascata, apresenta córregos, áreas brejosas, nascentes que formam um lago artificial, afloramentos rochosos, encostas e remanescentes da Mata Atlântica.</p>
+<p>O Parque Caminho do Mar, na Cidade Continental, oferece campo society, quadra de areia, quadra poliesportiva, parquinho, praça para pets e a segunda maior rampa de skate do Estado.</p>
+<p>O funcionamento dos parques é diário das 6h às 22h, exceto o Jardim Botânico que funciona de segunda a sexta-feira no Horto.</p>
   </div>
 </body>
 </html>
