Update page ESMULTI esmulti_6d78cb6df88509c20a88bd325a352690f1ce48e7

--- a/p/esmulti_6d78cb6df88509c20a88bd325a352690f1ce48e7/index.html
+++ b/p/esmulti_6d78cb6df88509c20a88bd325a352690f1ce48e7/index.html
@@ -4,10 +4,10 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>Mulher trans é morta pela Guarda Municipal após esfaquear rival no Centro de Vitória</title>
-  <meta name="description" content="Natasha Lucas do Nascimento, de 27 anos, foi baleada por um agente da Guarda Municipal após atacar outra mulher na Praça Costa Pereira, Centro de Vitória."/>
+  <meta name="description" content="Natasha Lucas do Nascimento, de 27 anos, foi baleada pela Guarda Municipal após atacar outra mulher com uma faca na Praça Costa Pereira, Centro de Vitória."/>
   <link rel="canonical" href="https://evwbr.github.io/es/p/esmulti_6d78cb6df88509c20a88bd325a352690f1ce48e7/"/>
   <meta property="og:title" content="Mulher trans é morta pela Guarda Municipal após esfaquear rival no Centro de Vitória"/>
-  <meta property="og:description" content="Natasha Lucas do Nascimento, de 27 anos, foi baleada por um agente da Guarda Municipal após atacar outra mulher na Praça Costa Pereira, Centro de Vitória."/>
+  <meta property="og:description" content="Natasha Lucas do Nascimento, de 27 anos, foi baleada pela Guarda Municipal após atacar outra mulher com uma faca na Praça Costa Pereira, Centro de Vitória."/>
   <meta property="og:image" content="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Fespiritosantonoticias.com.br%2Fwp-content%2Fthemes%2Flayout_2019%2Fres%2Fimg%2Flogo.png"/>
   <meta name="twitter:card" content="summary_large_image"/>
   <meta name="twitter:image" content="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Fespiritosantonoticias.com.br%2Fwp-content%2Fthemes%2Flayout_2019%2Fres%2Fimg%2Flogo.png"/>
@@ -25,13 +25,13 @@
     <figure style="margin:0 0 14px 0;">
       <img src="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Fespiritosantonoticias.com.br%2Fwp-content%2Fthemes%2Flayout_2019%2Fres%2Fimg%2Flogo.png" alt="Mulher trans é morta pela Guarda Municipal após esfaquear rival no Centro de Vitória" style="width:100%;max-width:820px;border-radius:10px;display:block;"/>
     </figure>
-    <p class="lead">Natasha Lucas do Nascimento, de 27 anos, foi baleada por um agente da Guarda Municipal após atacar outra mulher na Praça Costa Pereira, Centro de Vitória.</p>
-<p>O incidente ocorreu no final da noite de domingo (15), durante o carnaval no Centro de Vitória. Natasha Lucas do Nascimento teria ignorado ordens de parada e atacado outra mulher com uma faca na frente dos agentes da Guarda Municipal.</p>
-<p>Testemunhas informaram que a briga foi motivada por um desentendimento antigo entre as duas mulheres. A vítima do ataque correu em direção a uma viatura da Guarda Municipal para pedir socorro e se proteger atrás dos agentes.</p>
-<p>Mesmo após as ordens para parar, Natasha avançou contra a vítima e a feriu no braço. Um agente da Guarda Municipal disparou contra Natasha para conter a agressão.</p>
-<p>Natasha foi socorrida e levada para o Hospital Estadual de Urgência e Emergência (Heue), mas não resistiu aos ferimentos e morreu.</p>
-<p>A Guarda Municipal de Vitória declarou que a equipe agiu em defesa da vida da vítima, utilizando força necessária após as ordens verbais serem ignoradas. A Polícia Civil encaminhou o caso para a Delegacia Regional de Vitória.</p>
-<p>Duas mulheres que estavam com Natasha foram levadas para prestar esclarecimentos. O corpo de Natasha foi encaminhado ao Departamento Médico Legal (DML) para necropsia.</p>
+    <p class="lead">Natasha Lucas do Nascimento, de 27 anos, foi baleada pela Guarda Municipal após atacar outra mulher com uma faca na Praça Costa Pereira, Centro de Vitória.</p>
+<p>O incidente ocorreu no final da noite de domingo (15), durante o carnaval no Centro de Vitória. Natasha Lucas do Nascimento atacou outra mulher com uma faca em frente a agentes da Guarda Municipal na Praça Costa Pereira.</p>
+<p>Testemunhas informaram que a briga teve origem em um desentendimento antigo entre as duas mulheres. A vítima da facada buscou proteção atrás dos agentes e pediu socorro.</p>
+<p>Mesmo após ordens para parar, Natasha avançou contra a vítima e foi baleada por um guarda municipal. A vítima relatou que a agressora desconsiderou o aviso do agente antes do disparo.</p>
+<p>Natasha foi socorrida e levada ao Hospital Estadual de Urgência e Emergência (Heue), mas não resistiu aos ferimentos e faleceu.</p>
+<p>A Guarda Municipal de Vitória declarou que agiu em defesa da vida da vítima, utilizando força necessária após ordens verbais ignoradas. A ação seguiu os princípios da legalidade e necessidade.</p>
+<p>A Polícia Civil encaminhou o caso para a Delegacia Regional de Vitória. Duas mulheres que estavam com Natasha prestaram esclarecimentos. O corpo foi levado ao Departamento Médico Legal para necropsia.</p>
   </div>
 </body>
 </html>
