Update page ESMULTI esmulti_152c9a16df12966e0091df8661d102d01733447f

--- a/p/esmulti_152c9a16df12966e0091df8661d102d01733447f/index.html
+++ b/p/esmulti_152c9a16df12966e0091df8661d102d01733447f/index.html
@@ -4,10 +4,10 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>Polícia prende mulher que matou companheiro a facadas em Alto Rio Novo</title>
-  <meta name="description" content="Mulher de 39 anos foi presa preventivamente por homicídio contra companheiro em Alto Rio Novo, após investigação descartar legítima defesa."/>
+  <meta name="description" content="Mulher de 39 anos foi presa preventivamente por assassinar o companheiro de 36 anos em janeiro, após investigação descartar legítima defesa."/>
   <link rel="canonical" href="https://evwbr.github.io/es/p/esmulti_152c9a16df12966e0091df8661d102d01733447f/"/>
   <meta property="og:title" content="Polícia prende mulher que matou companheiro a facadas em Alto Rio Novo"/>
-  <meta property="og:description" content="Mulher de 39 anos foi presa preventivamente por homicídio contra companheiro em Alto Rio Novo, após investigação descartar legítima defesa."/>
+  <meta property="og:description" content="Mulher de 39 anos foi presa preventivamente por assassinar o companheiro de 36 anos em janeiro, após investigação descartar legítima defesa."/>
   <meta property="og:image" content="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Fespiritosantonoticias.com.br%2Fwp-content%2Fuploads%2F2026%2F02%2FWhatsApp-Image-2024-10-30-at-12.02.53.jpeg"/>
   <meta name="twitter:card" content="summary_large_image"/>
   <meta name="twitter:image" content="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Fespiritosantonoticias.com.br%2Fwp-content%2Fuploads%2F2026%2F02%2FWhatsApp-Image-2024-10-30-at-12.02.53.jpeg"/>
@@ -25,12 +25,12 @@
     <figure style="margin:0 0 14px 0;">
       <img src="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Fespiritosantonoticias.com.br%2Fwp-content%2Fuploads%2F2026%2F02%2FWhatsApp-Image-2024-10-30-at-12.02.53.jpeg" alt="Polícia prende mulher que matou companheiro a facadas em Alto Rio Novo" style="width:100%;max-width:820px;border-radius:10px;display:block;"/>
     </figure>
-    <p class="lead">Mulher de 39 anos foi presa preventivamente por homicídio contra companheiro em Alto Rio Novo, após investigação descartar legítima defesa.</p>
-<p>A Polícia Civil do Espírito Santo prendeu preventivamente uma mulher de 39 anos acusada de assassinar o companheiro, Edivaldo Evangelista de Sousa, de 36 anos, em Alto Rio Novo. A prisão ocorreu na tarde de sexta-feira (13), por meio de mandado judicial cumprido pela delegacia local.</p>
-<p>O homicídio aconteceu no dia 12 de janeiro na localidade de Padre Pedro, zona rural da cidade. A Polícia Militar e o Samu 192 foram acionados, mas constataram o óbito no local.</p>
-<p>Inicialmente, o pai da suspeita relatou que o casal discutiu e que o companheiro teria se apossado de uma faca, com a mulher reagindo e desferindo os golpes. A mulher foi detida e autuada em flagrante por homicídio, mas liberada pela Justiça durante audiência de custódia com base em legítima defesa.</p>
-<p>A investigação aprofundada da Polícia Civil revogou a liberdade da mulher, pois a dinâmica do crime não sustentava a tese de legítima defesa. O delegado Átila Ambrósio de Freitas afirmou que a excludente de ilicitude não se aplicava ao caso.</p>
-<p>A mulher foi localizada na casa de uma vizinha, próxima ao imóvel onde morava com a vítima. Ela acompanhou voluntariamente a equipe policial para buscas, onde nenhum material ilícito foi encontrado.</p>
+    <p class="lead">Mulher de 39 anos foi presa preventivamente por assassinar o companheiro de 36 anos em janeiro, após investigação descartar legítima defesa.</p>
+<p>A Polícia Civil do Espírito Santo prendeu preventivamente uma mulher de 39 anos acusada de matar o companheiro, Edivaldo Evangelista de Sousa, de 36 anos, no dia 12 de janeiro, na localidade de Padre Pedro, zona rural de Alto Rio Novo.</p>
+<p>No dia do crime, Edivaldo foi morto com golpes de faca. A Polícia Militar e o Samu foram acionados, mas constataram o óbito no local. O pai da suspeita relatou que o casal discutiu e que o companheiro teria se apossado da faca, sendo que a mulher teria reagido e desferido os golpes.</p>
+<p>A mulher foi detida e autuada em flagrante por homicídio. Em depoimento, alegou legítima defesa, afirmando que o companheiro apresentava surtos e a agredia frequentemente. Ela foi liberada pela Justiça na audiência de custódia com base nessa versão.</p>
+<p>A liberdade foi revogada após investigação técnica da Polícia Civil demonstrar que a tese de legítima defesa não se aplicava ao caso,.</p>
+<p>A prisão preventiva foi cumprida na casa de uma vizinha próxima ao imóvel onde a mulher morava com a vítima. Ela acompanhou a equipe policial voluntariamente e nenhum material ilícito foi encontrado no local.</p>
 <p>Após os procedimentos legais, a mulher foi transferida para o Centro de Detenção Provisória de Colatina, onde aguardará os desdobramentos do processo à disposição da Justiça.</p>
   </div>
 </body>
