Update page ESMULTI esmulti_91a2104722965792b4e80bd6ebd0ae5dd7bb6096

--- a/p/esmulti_91a2104722965792b4e80bd6ebd0ae5dd7bb6096/index.html
+++ b/p/esmulti_91a2104722965792b4e80bd6ebd0ae5dd7bb6096/index.html
@@ -4,10 +4,10 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>Justiça do Trabalho determina reintegração de trabalhador da Vale afastado por problemas psiquiátricos</title>
-  <meta name="description" content="A Justiça do Trabalho ordenou que a Vale reintegre um técnico demitido durante afastamento por auxílio-doença."/>
+  <meta name="description" content="A Justiça do Trabalho ordenou que a Vale reintegre um trabalhador demitido enquanto recebia auxílio-doença por problemas psiquiátricos."/>
   <link rel="canonical" href="https://evwbr.github.io/es/p/esmulti_91a2104722965792b4e80bd6ebd0ae5dd7bb6096/"/>
   <meta property="og:title" content="Justiça do Trabalho determina reintegração de trabalhador da Vale afastado por problemas psiquiátricos"/>
-  <meta property="og:description" content="A Justiça do Trabalho ordenou que a Vale reintegre um técnico demitido durante afastamento por auxílio-doença."/>
+  <meta property="og:description" content="A Justiça do Trabalho ordenou que a Vale reintegre um trabalhador demitido enquanto recebia auxílio-doença por problemas psiquiátricos."/>
   <meta property="og:image" content="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Feshoje.com.br%2Fwp-content%2Fuploads%2F2026%2F02%2FEMPRESA-VALE-DO-RIO-DOCE.jpeg"/>
   <meta name="twitter:card" content="summary_large_image"/>
   <meta name="twitter:image" content="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Feshoje.com.br%2Fwp-content%2Fuploads%2F2026%2F02%2FEMPRESA-VALE-DO-RIO-DOCE.jpeg"/>
@@ -25,13 +25,13 @@
     <figure style="margin:0 0 14px 0;">
       <img src="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Feshoje.com.br%2Fwp-content%2Fuploads%2F2026%2F02%2FEMPRESA-VALE-DO-RIO-DOCE.jpeg" alt="Justiça do Trabalho determina reintegração de trabalhador da Vale afastado por problemas psiquiátricos" style="width:100%;max-width:820px;border-radius:10px;display:block;"/>
     </figure>
-    <p class="lead">A Justiça do Trabalho ordenou que a Vale reintegre um técnico demitido durante afastamento por auxílio-doença.</p>
-<p>O trabalhador exercia a função de Técnico de Controle de Processo II no Porto de Tubarão, entre Serra e Vitória. Ele foi dispensado sem justa causa em 7 de março de 2025, enquanto enfrentava graves problemas psiquiátricos e já tinha processo em andamento para afastamento pelo INSS.</p>
-<p>Dias após a demissão, o empregado passou a receber auxílio-doença. Com a concessão do benefício previdenciário durante o aviso prévio indenizado, ele ingressou com reclamação trabalhista na 9ª Vara do Trabalho de Vitória, pedindo a nulidade da demissão.</p>
-<p>A decisão liminar determinou a reintegração imediata do trabalhador, o restabelecimento do plano de saúde e a manutenção do contrato, com base na Súmula 371 do Tribunal Superior do Trabalho, que impede a dispensa imediata quando há concessão de auxílio-doença no curso do aviso prévio.</p>
-<p>A Vale impetrou Mandado de Segurança no Tribunal Regional do Trabalho da 17ª Região, alegando ilegalidade, mas o pedido foi negado por unanimidade. O TRT-17 confirmou que a concessão do auxílio-doença durante o aviso prévio impede a extinção imediata do contrato.</p>
-<p>O trabalhador permanece reintegrado, com contrato ativo e plano de saúde restabelecido, enquanto segue afastado pelo INSS. O contrato fica suspenso enquanto durar o benefício previdenciário,.</p>
-<p>Antes da demissão, o mesmo trabalhador havia movido outra reclamação trabalhista contra a Vale, iniciada em 2022, sobre equiparação salarial e diferenças remuneratórias, que já transitou em julgado e está em fase de liquidação com nomeação de perito.</p>
+    <p class="lead">A Justiça do Trabalho ordenou que a Vale reintegre um trabalhador demitido enquanto recebia auxílio-doença por problemas psiquiátricos.</p>
+<p>O trabalhador exercia a função de Técnico de Controle de Processo II no Porto de Tubarão, entre Serra e Vitória, e foi dispensado sem justa causa em 7 de março de 2025, mesmo com processo em andamento para afastamento pelo INSS.</p>
+<p>Dias após a demissão, o empregado passou a receber auxílio-doença e ingressou com reclamação trabalhista na 9ª Vara do Trabalho de Vitória, pedindo a nulidade da demissão e a reintegração ao quadro da mineradora.</p>
+<p>A decisão liminar determinou a reintegração imediata do trabalhador, o restabelecimento do plano de saúde e a manutenção do vínculo contratual, fundamentada na Súmula 371 do Tribunal Superior do Trabalho, que impede a dispensa imediata quando há concessão de auxílio-doença durante o aviso prévio.</p>
+<p>A Vale impetrou Mandado de Segurança no Tribunal Regional do Trabalho da 17ª Região, alegando ilegalidade, mas o pedido foi negado por unanimidade, mantendo a decisão de primeira instância.</p>
+<p>O contrato do trabalhador permanece suspenso enquanto durar o benefício previdenciário,.</p>
+<p>Antes da demissão, o trabalhador havia movido outra reclamação trabalhista contra a Vale, iniciada em 2022, que tratava de pedido de equiparação salarial e diferenças remuneratórias, já transitada em julgado e em fase de liquidação.</p>
   </div>
 </body>
 </html>
